2008-07-17  Tambet Ingo  <tambet@gmail.com>

	Fix connection editor's wireless security handling.

	* src/gconf-helpers/gconf-helpers.c (nm_gconf_connection_duplicate):
	Implement. Just using nm_connection_duplicate() does not add the applet
	specific object data.

	* src/connection-editor/nm-connection-list.c (do_edit): When duplicating the
	connection, use a helper function to get all the associated data as well.

	* src/connection-editor/nm-connection-editor.c (connection_editor_validate):
	Add some debug output for now to make it easier to see which page fails.

2008-07-11  Tambet Ingo  <tambet@gmail.com>

	* src/applet.glade: Add a placeholder for the info dialog's notebook to avoid
	a warning on startup.

2008-07-09  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
		- (applet_get_default_active_connection): return a non-default connection
			if there is no default connection; fixes issue displaying the not-
			connected icon if a shared or autoip connection is active

2008-07-08  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/page-wireless.c
		- (populate_ui): ensure changes update the connection on-the-fly

2008-07-08  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/nm-connection-editor.c
	  src/connection-editor/nm-connection-editor.h
	  src/connection-editor/ce-page.c
	  src/connection-editor/ce-page.h
		- Move ce_spin_output_with_default() and ce_get_property_default() to
			ce-page.c

2008-07-08  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
	  src/applet.h
		- (nma_context_menu_create): remember signal IDs
		- (nma_context_menu_update): block emission of 'toggled' handlers so
			they don't get called when updating the checkitems' status

2008-07-08  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/page-ip4.c
		- (method_changed): disable manual configuration elements when AutoIP
			is selected too

2008-07-07  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/page-ip4.c
	  src/applet-dialogs.c