@@ -1,3 +1,11 @@
+2008-07-21  Dan Williams  <dcbw@redhat.com>
+
+	* src/gconf-helpers/gconf-upgrade.c
+	  src/gconf-helpers/gconf-upgrade.h
+	  src/gconf-helpers/gconf-helpers.c
+		- (nm_gconf_migrate_0_7_netmask_to_prefix, nm_gconf_get_all_connections):
+			convert netmasks to prefixes
+
 2008-07-17  Tambet Ingo  <tambet@gmail.com>
 
 	Fix connection editor's wireless security handling.
